# Parser_vacancies_with_db

./: README.md  main.py  pyproject.toml
classes/: database.py  engine_hh.py
data_files/: database.ini  script.sql
tests/: resquest.json  test.json  test_hh.py  test_utils.py
utils/: config.py  utils.py
